docs/standards/v3/roadmap-json-standard.md
---
document_type: standard
title: Roadmap JSON Standard (v3)
status: approved
scope: shared-state
authority:
  - roadmap-json-schema
  - roadmap-item-fields
author: Codex GPT-5
created: 2026-03-08
last_updated: 2026-03-10
related_docs:
  - SOUL.md
  - CLAUDE.md
  - docs/standards/glossary.md
  - docs/standards/v3/data-model-standard.md
  - docs/standards/v3/command-standard.md
---

# `roadmap.json` 标准 (v3)

本文档定义 v3 Python 实现中 `roadmap.json` 的最终文件结构。

> **重要变更**: v3 使用 **GitHub Projects 作为真源**，`roadmap.json` 仅作为本地缓存和桥接，不再作为规划态真源。

本文档涉及的 `roadmap item`、`task`、`repo issue`、`worktree`、`branch`、`pr` 等正式术语以 [glossary.md](/Users/jacobcy/src/vibe-center/wt-claude-v3/docs/standards/glossary.md) 为准。

## 1. File Responsibility

`roadmap.json` 在 v3 中只作为**本地缓存和桥接**：

- 缓存 GitHub Project items（ mirrored roadmap items）
- GitHub Project 身份锚点（`project_id`）
- roadmap item 状态（与 GitHub Project 同步）
- milestone / 兼容性的 `version_goal`
- roadmap item 与 task / repo issue 的映射
- 本地执行桥接扩展字段

`roadmap.json` **不负责**：

- **规划态真源**（真源在 GitHub Projects）
- task execution record 本体
- branch
- worktree
- `dirty`
- task runtime
- PR 历史
- 当前版本号真源

## 2. Root Shape

根对象固定为：

```json
{
  "schema_version": "v3",
  "project_id": null,
  "milestone": null,
  "version_goal": null,
  "items": []
}
```

根对象只允许：

- `schema_version`（v3 固定为 "v3"）
- `project_id`
- `milestone`
- `version_goal`
- `items`

## 3. Roadmap Item Shape

每个 roadmap item 对象固定包含以下字段：

```json
{
  "roadmap_item_id": "roadmap-command-standard",
  "title": "Standardize shared-state command model",
  "description": "Define final command semantics for roadmap, task, flow, and check.",
  "type": "feature",
  "status": "current",
  "source_type": "local",
  "source_refs": [],
  "github_project_item_id": null,
  "content_type": "draft_issue",
  "spec_standard": null,
  "execution_record_id": null,
  "spec_ref": null,
  "issue_refs": [],
  "depends_on_item_ids": [],
  "linked_task_ids": [
    "2026-03-08-command-standard-rewrite"
  ],
  "created_at": "2026-03-08T09:00:00+08:00",
  "updated_at": "2026-03-08T10:00:00+08:00"
}
```

## 4. Field Rules

### 4.1 Required Fields

以下字段必须存在：

- `roadmap_item_id`
- `title`
- `type`
- `status`
- `source_type`
- `source_refs`
- `github_project_item_id`
- `content_type`
- `spec_standard`
- `execution_record_id`
- `spec_ref`
- `issue_refs`
- `depends_on_item_ids`
- `linked_task_ids`
- `created_at`
- `updated_at`

### 4.2 Optional or Nullable Fields

以下字段允许为 `null`：

- `version_goal`
- `project_id`
- `description`
- `milestone`
- `github_project_item_id`
- `spec_standard`
- `execution_record_id`
- `spec_ref`

说明：

- 根字段 `milestone` 保留，作为当前规划窗口的标准锚点
- 根字段 `project_id` 是 GitHub Project 的稳定身份锚点；缺失时不得执行远端 sync / add
- 根字段 `version_goal` 保留，但只作为兼容性文本锚点，不替代 milestone
- item 级 `source_refs` 用于记录 GitHub Project item / issue 等来源引用

### 4.3 Status Enum

`status` 只允许：

- `p0`
- `current`
- `next`
- `deferred`
- `rejected`

### 4.4 Source Enum

`source_type` 只允许：

- `github`
- `local`

### 4.5 Type Enum

`type` 只允许：

- `feature`
- `task`
- `bug`

### 4.6 GitHub Alignment Fields

`content_type` 只允许：

- `issue`
- `pull_request`
- `draft_issue`

约束：

- `content_type` 表达 GitHub Project item 的官方来源类型
- `github_project_item_id` 用于稳定对齐 GitHub Project item 身份
- 这两个字段属于 GitHub 官方层，不得被本地 workflow 语义覆盖

### 4.7 Vibe Extension Fields

`spec_standard` 只允许：

- `openspec`
- `kiro`
- `superpowers`
- `supervisor`
- `none`

约束：

- `spec_standard` 是 Vibe 扩展字段，不是 GitHub 官方字段
- `execution_record_id` 用于桥接本地 `registry.json.task_id`
- `spec_ref` 用于指向规范文档或执行规范入口
- 这些扩展字段只保留在本地共享真源，不回写到 GitHub Project
- 扩展字段不得改变 GitHub item 的官方身份字段

## 5. Relationship Rules

- `linked_task_ids` 用于关联执行层 task
- `issue_refs` 用于关联 repo issue
- `source_refs` 用于记录导入来源
- `depends_on_item_ids` 用于声明 roadmap item 之间的依赖关系

补充约束：

- `roadmap item` 是 mirrored `GitHub Project item`，不是任意本地 feature 草稿
- `roadmap.json` 顶层 `project_id` 决定当前仓库默认绑定的 GitHub Project
- `type=feature|task|bug` 只表达规划分类，足以覆盖当前标准层需求
- 若未来需要更高层规划对象，应新增独立标准，而不是让 roadmap item 混装 `epic`
- `source_refs` 应优先记录 GitHub Project item / repo issue 来源，而不是本地运行时来源
- `github_project_item_id` + `content_type` 是 GitHub Project 对齐主桥
- `spec_standard` / `execution_record_id` / `spec_ref` / `linked_task_ids` 是本地执行桥接字段
- `depends_on_item_ids` 是依赖声明字段，只允许引用其他 `roadmap_item_id`
- `depends_on_item_ids` 的最终校验规则以后续批准的依赖方案为准；当前只保留字段落点与引用边界
- 一个 roadmap item 可以关联多个 task
- 一个 roadmap item 可以关联多个 repo issue
- 一个 `type=feature` 的 roadmap item 可以拆分出多个 `type=task` item 或多个 execution record
- 一个 `type=task` 的 roadmap item 也可以继续拆成多个 execution record
- roadmap item 不直接持有 PR 字段

## 6. Version Goal Rules

- `milestone` 是根对象字段，表示当前版本或阶段窗口
- `version_goal` 是根对象字段
- `version_goal` 表示当前规划窗口目标的兼容性文本锚点
- `version_goal` 不是当前版本号

禁止：

- `current_version`
- `next_version`
- `version_bump`

## 7. Prohibited Fields

禁止在 `roadmap.json` 中写入：

- `branch`
- `worktree`
- `dirty`
- `pr_ref`
- `pr_history`
- `feature`
- `epic`
- `current_version`
- `runtime_worktree_name`
- `runtime_branch`
- `runtime_agent`

## 8. Sync Rules (v3 新增)

v3 中 `roadmap.json` 与 GitHub Projects 的同步规则：

1. **单向同步原则**: GitHub Projects → `roadmap.json`
   - 真源在 GitHub Projects
   - `roadmap.json` 仅作为本地缓存

2. **同步触发时机**:
   - `vibe3 flow sync` 显式同步
   - 启动时自动同步（配置开启）
   - 手动编辑 roadmap.json 后需手动同步回 GitHub

3. **字段映射**:
   - GitHub Project 字段 ↔ roadmap.json 字段自动映射
   - 自定义字段保留在 `source_refs`

4. **冲突解决**:
   - 默认以 GitHub Projects 为准
   - 本地修改需显式推送

## 9. Minimal Example

```json
{
  "schema_version": "v3",
  "project_id": "PVT_kwDOBHxkss4A1a2B",
  "milestone": "v3.0",
  "version_goal": "GitHub Projects as source of truth",
  "items": [
    {
      "roadmap_item_id": "roadmap-command-standard",
      "title": "Standardize shared-state command model",
      "description": null,
      "type": "feature",
      "status": "current",
      "source_type": "github",
      "source_refs": ["github://project/PVT_kwDOBHxkss4A1a2B/items/123"],
      "github_project_item_id": "PVTI_lADOABCD123",
      "content_type": "draft_issue",
      "spec_standard": "openspec",
      "execution_record_id": null,
      "spec_ref": null,
      "issue_refs": [],
      "depends_on_item_ids": [],
      "linked_task_ids": [],
      "created_at": "2026-03-08T09:00:00+08:00",
      "updated_at": "2026-03-08T10:00:00+08:00"
    }
  ]
}
```
